# duckdb-eda-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/dems/: database.py  mcp.py  sample_db.py
tests/: test_duckdb_operations.py
