[project]
name = "dems"
version = "1.0.0"
description = "MCP server for exploratory data analytics using DuckkDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "fastmcp>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
dems = "main:main"

[tool.ruff]
line-length = 120
